@@ -1,3 +1,8 @@
+2009-10-12  Sam Steingold  <sds@gnu.org>
+
+	* progmodes/compile.el (compilation-next-error-function): Fix the
+	timestamps if the buffer has been visited before
+
 2009-10-12  Glenn Morris  <rgm@gnu.org>
 
 	* net/tramp-smb.el (tramp-smb-do-file-attributes-with-stat):
